[gd_scene load_steps=5 format=3 uid="uid://dygu3j15217ab"]

[ext_resource type="Script" path="res://Scripts/Utility/potion_shop.gd" id="1_87mlj"]
[ext_resource type="Texture2D" uid="uid://bg6jfgxgjwiv3" path="res://icon.svg" id="1_vfvtm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfd0f"]
size = Vector2(392, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41pya"]
size = Vector2(408, 162)

[node name="PotionShop" type="StaticBody2D"]
script = ExtResource("1_87mlj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(140, 32)
scale = Vector2(3.1875, 1.5)
texture = ExtResource("1_vfvtm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(140, 32)
shape = SubResource("RectangleShape2D_sfd0f")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(140, 199)
shape = SubResource("RectangleShape2D_41pya")

[node name="Label" type="Label" parent="."]
offset_left = 72.0
offset_top = -112.0
offset_right = 166.0
offset_bottom = -89.0
text = "Potion Shop"

[node name="Khata_Update" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Khata_Update" to="." method="_on_khata_update_timeout"]
